# tplinkCtrl

./: .gitignore  DAEMON_README.md  README.md  pyproject.toml  tplinkCtrl-daemon.service
config/: config.json  schedule_config.json
src/: daemon.py  main.py
