[project]
name = "tplinkctrl"
version = "0.2.0"
description = "TP-Link Router Device Network Control Tool - Control network access for devices connected to TP-Link routers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "apscheduler>=3.10.0",
]
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = [
    "tp-link",
    "router",
    "network",
    "device",
    "control",
    "parental-control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
